--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
 <div style="text-align:center">
-
-  <app-kerros></app-kerros>
-
-
-
-<router-outlet></router-outlet>
+<router-outlet class=""></router-outlet>
+</div>
