--- a/src/app/views/kerros/kerros.component.html
+++ b/src/app/views/kerros/kerros.component.html
@@ -1,14 +1,16 @@
-<div class="bg">
-
+<div class="image">
+<h2 hidden>{{counter$ | async}}</h2>
 <h2 [ngClass]= "{'canOpen': ovenVoiAvata}">{{kerrosNro}} KRS</h2>
-<div [hidden]="!ovenVoiAvata">astu hissiin</div>
+<div  *ngIf="hissiHuollossa" class="huollossa">Hissi huollossa: kävele, tai paina F5</div>
+<button (click)="astuHissiin()" [hidden]="!ovenVoiAvata">astu hissiin</button>
  <div class="info">
-  {{hissinSijainti | async}}
+  {{hissinSijainti}}
  </div>
 <div *ngFor="let nappula of napit" class="hissi-btns-container">
-  <button (click)="tilaaHissi(nappula)" mat-mini-fab>
+  <button (click)="tilaa(nappula)" mat-mini-fab>
     <mat-icon [ngClass]= "{'pressed': nappula.pressed}" aria-label="Example icon-button with a heart icon">{{nappula.icon}}</mat-icon>
   </button>
 </div>
+{{testi}}
 </div>
 
