--- a/src/app/views/kerros/kerros.component.scss
+++ b/src/app/views/kerros/kerros.component.scss
@@ -1,9 +1,12 @@
 
 
 .bg {
-
-  height: 100%;
+  background-image: url("../../../assets/elevator-cabin-interior-1171689022.html") ;
+  height: 100vh;
+  width:100 vw;
 }
+
+
 
 .hissi-btns-container {
 display: flex;
@@ -18,6 +21,12 @@ align-items: center;
   display: inline-block;
   margin-bottom: 2em;
   padding: 4px;
+  margin-top: 1em;
+}
+
+.huollossa {
+  padding: 1em;
+  background-color: red;
 }
 
 
