--- a/src/app/views/inside-hissi/inside-hissi.component.scss
+++ b/src/app/views/inside-hissi/inside-hissi.component.scss
@@ -2,3 +2,13 @@
 .pressed {
   border-color: red;
 }
+
+.info {
+  color: red;
+  border: 1px solid;
+  border-color: black;
+  display: inline-block;
+  margin-bottom: 2em;
+  padding: 4px;
+  margin-top: 1em;
+}
